Make a responsive view

--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
 				</article>
 
 				<article class="description">
-					<p>Come eat waffles & chat about geography related things with us!</p>
+					<p>Come eat waffles & chat about geography related topics with us!</p>
 					<a href="https://goo.gl/forms/mFosi6j9NlYXHsIG2" target="_blank">
-						<button class="btn">Sign up for updates & breakfast info</button>
+						<button class="btn">Sign up for updates & breakfast info!</button>
 					</a>
 				</article>
 
