added link to twitter for #geobreakfastdc

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
 
 	<body>
 		<div class="page-content">
-			<h1>#GeobreakfastDC</h1>
+			<a href="https://twitter.com/search?src=typd&q=geobreakfastdc" target="_blank">
+			  <h1>#GeobreakfastDC</h1>
+			</a>
 			<div class="frying-pan">
 				<img src="./assets/graphics/fryingpan2.png"></img>
 			</div>
