add twitter card maybe

--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
 		<!-- Our Lovely Styles -->
 		<link rel="stylesheet" href="./assets/styles/main.css">
 
+		<!-- Twitter Card -->
+		<meta name="twitter:card" content="summary_large_image">
+		<meta name="twitter:site" content="@geobreakfast">
+		<meta name="twitter:title" content="GeobreakfastDC">
+		<meta name="twitter:description" content="">
+		<meta name="twitter:image" content="./assets/graphics/default-meta-image.png">
 	</head>
 
 	<body>
