--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<meta name="twitter:card" content="summary_large_image">
 		<meta name="twitter:site" content="@geobreakfast">
 		<meta name="twitter:title" content="GeobreakfastDC">
-		<meta name="twitter:description" content="">
+		<meta name="twitter:description" content="We're a bunch of folks who live in DC that enjoy geography and breakfast and love an excuse to enjoy both in one morning.">
 		<meta name="twitter:image" content="./assets/graphics/default-meta-image.png">
 	</head>
 
