Try it out with a square image hm

--- a/index.html
+++ b/index.html
@@ -16,12 +16,22 @@
 		<!-- Our Lovely Styles -->
 		<link rel="stylesheet" href="./assets/styles/main.css">
 
-		<!-- Twitter Card -->
-		<meta name="twitter:card" content="summary_large_image">
-		<meta name="twitter:site" content="@geobreakfast">
+		<!-- Twitter -->
+		<meta name="twitter:card" content="summary_large_image" />
+		<meta name="twitter:site" content="@geobreakfast" />
 		<meta name="twitter:title" content="GeobreakfastDC">
-		<meta name="twitter:description" content="We're a bunch of folks who live in DC that enjoy geography and breakfast and love an excuse to enjoy both in one morning.">
-		<meta name="twitter:image" content="./assets/graphics/default-meta-image.png">
+		<meta name="twitter:description" content="We're a bunch of folks who live in DC that enjoy geography and breakfast and love an excuse to enjoy both in one morning." />
+		<meta name="twitter:image:src" content="https://geobreakfastdc.github.io/assets/graphics/default-meta-image-square.png" />
+		<!--/ Twitter --> 
+
+		<!-- OG -->
+		<meta property="og:site_name" content="GeobreakfastDC" />
+		<meta property="og:title" content="GeobreakfastDC" />
+		<meta property="og:url" content="https://geobreakfastdc.github.io" />
+		<meta property="og:type" content="website" />
+		<meta property="og:description" content="We're a bunch of folks who live in DC that enjoy geography and breakfast and love an excuse to enjoy both in one morning." />
+		<meta property="og:image" content="https://geobreakfastdc.github.io/assets/graphics/default-meta-image-square.png" />
+		<!--/ OG -->
 	</head>
 
 	<body>
