Set the event to null

--- a/index.html
+++ b/index.html
@@ -48,9 +48,19 @@
 
 				<article class="upcoming">
 					<p>We're next breakfasting:</p>
-					<p class="time"><span>Wednesday</span> 8:30-9:30am</p>
-					<p class="company">The National Press Club</p>
-					<p class="address">529 14th St. NW, 13th Floor</p>
+					<p class="time">
+						<span>
+						<!-- Day -->	
+						</span>
+						<!-- Time -->
+						</p>
+					<p class="company">
+						<!-- Place -->
+						Undetermined, Stay Tuned!
+					</p>
+					<p class="address">
+						<!-- Address -->
+					</p>
 					<div class="point_b"></div>
 				</article>
 
