Add upcoming event

--- a/index.html
+++ b/index.html
@@ -51,15 +51,19 @@
 					<p class="time">
 						<span>
 						<!-- Day -->	
+						Wednesday, April 3rd
 						</span>
 						<!-- Time -->
+						<p>
+						8:30 - 9:30am
 						</p>
 					<p class="company">
 						<!-- Place -->
-						Undetermined, Stay Tuned!
+						Lincoln's Waffle Shop
 					</p>
 					<p class="address">
 						<!-- Address -->
+						504 10th St NW
 					</p>
 					<div class="point_b"></div>
 				</article>
