--- a/index.html
+++ b/index.html
@@ -51,19 +51,19 @@
 					<p class="time">
 						<span>
 						<!-- Day -->	
-						Wednesday, May 3rd
+						<!-- Wednesday, May 3rd -->
 						</span>
 						<!-- Time -->
 						<p>
-						8:30 - 9:30am
+						<!-- 8:30 - 9:30am -->
 						</p>
 					<p class="company">
 						<!-- Place -->
-						Lincoln's Waffle Shop
+						Undetermined, Stay Tuned!
 					</p>
 					<p class="address">
 						<!-- Address -->
-						504 10th St NW
+						<!-- 504 10th St NW -->
 					</p>
 					<div class="point_b"></div>
 				</article>
