--- a/index.html
+++ b/index.html
@@ -51,19 +51,19 @@
 					<p class="time">
 						<span>
 						<!-- Day -->	
-						<!-- Wednesday, May 3rd -->
+						Friday, May 19th
 						</span>
 						<!-- Time -->
 						<p>
-						<!-- 8:30 - 9:30am -->
+						8:30 - 9:30am
 						</p>
 					<p class="company">
 						<!-- Place -->
-						Undetermined, Stay Tuned!
+						Lincoln's Waffle Shop
 					</p>
 					<p class="address">
 						<!-- Address -->
-						<!-- 504 10th St NW -->
+						504 10th St NW
 					</p>
 					<div class="point_b"></div>
 				</article>
