--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 	</head>
 
 	<body>
+	
 		<div class="page-content">
 			<a href="https://twitter.com/search?src=typd&q=geobreakfastdc" target="_blank">
 			  <h1 class="header-link">
@@ -58,19 +59,19 @@
 					<p class="time">
 						<span>
 						<!-- Day -->	
-						Friday, May 19th
+						<!-- Friday, May 19th -->
 						</span>
 						<!-- Time -->
 						<p>
-						8:30 - 9:30am
+						<!-- 8:30 - 9:30am -->
 						</p>
 					<p class="company">
 						<!-- Place -->
-						Lincoln's Waffle Shop
+						Undetermined, stay tuned!
 					</p>
 					<p class="address">
 						<!-- Address -->
-						504 10th St NW
+						<!-- 504 10th St NW -->
 					</p>
 					<div class="point_b"></div>
 				</article>
