--- a/index.html
+++ b/index.html
@@ -59,19 +59,19 @@
 					<p class="time">
 						<span>
 						<!-- Day -->	
-						<!-- Friday, May 19th -->
+						Thursday, June 15
 						</span>
 						<!-- Time -->
 						<p>
-						<!-- 8:30 - 9:30am -->
+						8:00 - 9:30am
 						</p>
 					<p class="company">
 						<!-- Place -->
-						Undetermined, stay tuned!
+						<a href="https://abakedjoint.com/">A Baked Joint</a>
 					</p>
 					<p class="address">
 						<!-- Address -->
-						<!-- 504 10th St NW -->
+						440 K St NW
 					</p>
 					<div class="point_b"></div>
 				</article>
