--- a/index.html
+++ b/index.html
@@ -59,19 +59,20 @@
 					<p class="time">
 						<span>
 						<!-- Day -->	
-						Thursday, June 15
+						<!-- Thursday, June 15 -->
 						</span>
 						<!-- Time -->
 						<p>
-						8:00 - 9:30am
+						<!-- 8:00 - 9:30am -->
 						</p>
 					<p class="company">
 						<!-- Place -->
-						<a href="https://abakedjoint.com/">A Baked Joint</a>
+						<!-- <a href="https://abakedjoint.com/">A Baked Joint</a> -->
+						To be determined!
 					</p>
 					<p class="address">
 						<!-- Address -->
-						440 K St NW
+						<!-- 440 K St NW -->
 					</p>
 					<div class="point_b"></div>
 				</article>
