Open City Diner

--- a/index.html
+++ b/index.html
@@ -59,20 +59,19 @@
 					<p class="time">
 						<span>
 						<!-- Day -->	
-						<!-- Thursday, June 15 -->
+						Friday, July 7th
 						</span>
 						<!-- Time -->
 						<p>
-						<!-- 8:00 - 9:30am -->
+						8:00 - 10:00am
 						</p>
 					<p class="company">
 						<!-- Place -->
-						<!-- <a href="https://abakedjoint.com/">A Baked Joint</a> -->
-						To be determined!
+						<a href="http://www.opencitydc.com/">Open City Diner</a>
 					</p>
 					<p class="address">
 						<!-- Address -->
-						<!-- 440 K St NW -->
+						2331 CALVERT ST. NW
 					</p>
 					<div class="point_b"></div>
 				</article>
