--- a/index.html
+++ b/index.html
@@ -59,19 +59,19 @@
 					<p class="time">
 						<span>
 						<!-- Day -->	
-						Friday, July 7th
+						Friday, Nov. 17th
 						</span>
 						<!-- Time -->
 						<p>
-						8:00 - 10:00am
+						8:00 - 11:00am
 						</p>
 					<p class="company">
 						<!-- Place -->
-						<a href="http://www.opencitydc.com/">Open City Diner</a>
+						<a href="http://www.bigbearcafe-dc.com/">Big Bear Café</a>
 					</p>
 					<p class="address">
 						<!-- Address -->
-						2331 CALVERT ST. NW
+						1700 1st St NW
 					</p>
 					<div class="point_b"></div>
 				</article>
