--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 					<p class="time">
 						<span>
 						<!-- Day -->	
-						Thursday, Sept 27th
+						Friday, December 14th
 						</span>
 						<!-- Time -->
 						<p>
@@ -67,11 +67,11 @@
 						</p>
 					<p class="company">
 						<!-- Place -->
-						<a href="http://www.opencitydc.com/">Open City Diner</a>
+						<a href="https://www.thecoupedc.com/">The Coupe</a>
 					</p>
 					<p class="address">
 						<!-- Address -->
-						2331 CALVERT ST. NW
+						3415 11th Street NW
 					</p>
 					<div class="point_b"></div>
 				</article>
