--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 					<p class="time">
 						<span>
 						<!-- Day -->	
-						Friday, December 14th
+						Thursday, June 26th
 						</span>
 						<!-- Time -->
 						<p>
@@ -67,11 +67,11 @@
 						</p>
 					<p class="company">
 						<!-- Place -->
-						<a href="https://www.thecoupedc.com/">The Coupe</a>
+						<a href="http://www.emissarydc.com/">Emissary</a>
 					</p>
 					<p class="address">
 						<!-- Address -->
-						3415 11th Street NW
+						2032 P St NW
 					</p>
 					<div class="point_b"></div>
 				</article>
