dum dum dum it lives

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
 		<!-- Goog Foot -->
 		<link href="https://fonts.googleapis.com/css?family=Hind:400,600,700" rel="stylesheet">
-    <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.34.0/mapbox-gl.js'></script>
-    <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.34.0/mapbox-gl.css' rel='stylesheet' />
+	    <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.34.0/mapbox-gl.js'></script>
+	    <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.34.0/mapbox-gl.css' rel='stylesheet' />
 
 		<!-- Our Lovely Styles -->
 		<link rel="stylesheet" href="./assets/styles/main.css">
@@ -59,26 +59,26 @@
 					<p class="time">
 						<span>
 						<!-- Day -->	
-						Wednesday, June 26th
+						Tuesday, July 19th
 						</span>
 						<!-- Time -->
 						<p>
-						8:00 - 10:00am
+						8:30 - 10:00am
 						</p>
 					<p class="company">
 						<!-- Place -->
-						<a href="http://www.emissarydc.com/">Emissary</a>
+						<a href="http://www.emissarydc.com/">Big Bear Cafe</a>
 					</p>
 					<p class="address">
 						<!-- Address -->
-						2032 P St NW
+						1700 1st Street NW DC
 					</p>
 					<div class="point_b"></div>
 				</article>
 
 				<article class="description">
-					<p>Come eat waffles & chat about geography related topics with us!</p>
-					<a href="https://goo.gl/forms/mFosi6j9NlYXHsIG2" target="_blank">
+					<p>Come eat waffles & chat 'bout geo & mapping related topics with us!</p>
+					<a href="https://forms.gle/U6YC7MGzLye87SYB6" target="_blank">
 						<button class="btn">Sign up for updates & breakfast info!</button>
 					</a>
 				</article>
